--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,6 +26,12 @@ spec:
           envFrom:
             - configMapRef:
                 name: ai-sre-demo-config
+          env:
+            - name: DATABASE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PASSWORD
           resources:
             requests:
               memory: "64Mi"
@@ -37,7 +43,7 @@ spec:
             httpGet:
               path: /health
               port: 8080
-            initialDelaySeconds: 5
+            initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
@@ -45,7 +51,7 @@ spec:
             httpGet:
               path: /health
               port: 8080
-            initialDelaySeconds: 3
+            initialDelaySeconds: 5
             periodSeconds: 5
             timeoutSeconds: 3
             failureThreshold: 3
