--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -53,6 +53,9 @@ spec:
           ports:
             - containerPort: 5432
               name: postgres
+          env:
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
           envFrom:
             - secretRef:
                 name: postgres-secret
