feat: enabling new cool feature!

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -13,7 +13,7 @@ data:
   # Set to "true" to enable the buggy experimental feature
   # This causes the app to crash immediately on startup (CrashLoopBackOff)
   # To fix: AI agent must fix the bug in buggy_feature.py and push a commit
-  ENABLE_BUGGY_FEATURE: "false"
+  ENABLE_BUGGY_FEATURE: "true"
   # Database connection settings
   DATABASE_HOST: "ai-sre-postgres"
   DATABASE_PORT: "5432"
