--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -7,13 +7,10 @@ metadata:
     app.kubernetes.io/name: ai-sre-demo
     app.kubernetes.io/managed-by: argocd
 data:
-  # Set to "true" to force the application to always report healthy
-  # This is used for remediation when the app enters failure mode
+  # Set to "true" to force the application to always report healthy (this is used for remediation when the app enters failure mode)
   FORCE_HEALTHY: "false"
   # Set to "true" to enable the buggy experimental feature
-  # This causes the app to crash immediately on startup (CrashLoopBackOff)
-  # To fix: AI agent must fix the bug in buggy_feature.py and push a commit
-  ENABLE_BUGGY_FEATURE: "false"
+  ENABLE_BUGGY_FEATURE: "true"
   # Database connection settings
   DATABASE_HOST: "ai-sre-postgres"
   DATABASE_PORT: "5432"
