--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -10,7 +10,7 @@ data:
   # Set to "true" to force the application to always report healthy (this is used for remediation when the app enters failure mode)
   FORCE_HEALTHY: "false"
   # Set to "true" to enable the buggy experimental feature
-  ENABLE_BUGGY_FEATURE: "false"
+  ENABLE_BUGGY_FEATURE: "true"
   # Database connection settings
   DATABASE_HOST: "ai-sre-postgres"
   DATABASE_PORT: "5432"
