--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -3,7 +3,28 @@ kind: Kustomization
 
 resources:
   - namespace.yaml
-  - configmap.yaml
   - postgres.yaml
   - deployment.yaml
   - service.yaml
+
+# ConfigMapGenerator automatically appends a hash suffix to the ConfigMap name.
+# Any change to the ConfigMap data triggers a rolling update of pods that reference it.
+# https://github.com/kubernetes-sigs/kustomize/blob/master/examples/configGeneration.md
+configMapGenerator:
+  - name: ai-sre-demo-config
+    namespace: ai-sre
+    literals:
+      # Set to "true" to force the application to always report healthy
+      - FORCE_HEALTHY=false
+      # Set to "true" to enable the buggy experimental feature (causes crash)
+      - ENABLE_BUGGY_FEATURE=false
+      # Database connection settings
+      - DATABASE_HOST=ai-sre-postgres
+      - DATABASE_PORT=5432
+      - DATABASE_NAME=todos
+      - DATABASE_USER=postgres
+
+generatorOptions:
+  labels:
+    app.kubernetes.io/name: ai-sre-demo
+    app.kubernetes.io/managed-by: argocd
